<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/ComeBackBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ComeBackBtn"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        android:background="@color/black"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/sound_lvl_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sound_lvl_text"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/colorPrimary"
        android:layout_weight="1"/>

    <SeekBar
        android:id="@+id/sound_lvl_sb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:thumbTint="@color/colorPrimaryDark"
        android:progress="50"
        android:thumbTintMode="src_over"
        android:progressTint="@color/colorPrimaryDark"
        android:progressBackgroundTint="@color/colorPrimaryDark"
        android:foregroundTint="@color/colorPrimaryDark"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/sound_speed_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sound_speed_text"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/colorPrimary"
        android:layout_weight="1"/>

    <SeekBar
        android:id="@+id/sound_speed_sb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:thumbTint="@color/colorPrimaryDark"
        android:progress="50"
        android:thumbTintMode="src_over"
        android:progressTint="@color/colorPrimaryDark"
        android:progressBackgroundTint="@color/colorPrimaryDark"
        android:foregroundTint="@color/colorPrimaryDark"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/language_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/language_txt"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/colorPrimary"
        android:layout_weight="1"/>

    <RadioGroup
        android:id="@+id/radio_group_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/radio_btn_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_one"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="50sp"
            android:checked="true"
            android:textColor="@color/colorPrimary"
            android:buttonTint="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/radio_btn_german"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_three"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:buttonTint="@color/colorPrimary"/>

    </RadioGroup>

</LinearLayout>