<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".TextRecognition">

    <Button
        android:id="@+id/ComeBackBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ComeBackBtn"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        android:background="@color/colorPrimaryDark" />

    <ImageView
        android:id="@+id/pictureView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/readText"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAlignment="center"
        android:autoSizeTextType="uniform"
        android:textSize="30sp"
        android:layout_weight="2"/>

    <Button
        android:id="@+id/PlayAgainBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/PlayAgainBtn"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark" />
</LinearLayout>